#ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = "-I$(top_srcdir) -I$(top_srcdir)/vtx -I$(top_srcdir)/quat $AM_CXXFLAGS"
#lib_LTLIBRARIES = libquat.la
#libquat_ladir = $(includedir)/quat
#libquat_la_HEADERS = quat.h
#libquat_la_SOURCES = quat.cpp $(libquat_la_HEADERS)

lib_LIBRARIES = libquat.a
libquat_adir = $(includedir)/quat
libquat_a_HEADERS = quat.h
libquat_a_SOURCES = quat.cpp $(libquat_a_HEADERS)
