#ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS = "-I$(top_srcdir) $AM_CXXFLAGS"
#lib_LTLIBRARIES = libvtx.la
#libvtx_ladir = $(includedir)/vtx
#libvtx_la_HEADERS = vtx.h
#libvtx_la_SOURCES = vtx.cpp $(libvtx_la_HEADERS)

lib_LIBRARIES = libvtx.a
libvtx_adir = $(includedir)/vtx
libvtx_a_HEADERS = vtx.h
libvtx_a_SOURCES = vtx.cpp $(libvtx_a_HEADERS)